[project]
name = "tool_using_agent"
version = "0.1.0"
description = "tool-using-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
tool_using_agent = "tool_using_agent.main:run"
run_crew = "tool_using_agent.main:run"
train = "tool_using_agent.main:train"
replay = "tool_using_agent.main:replay"
test = "tool_using_agent.main:test"
run_with_trigger = "tool_using_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
